# MySLAM_Stereo

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: run_kitti_stereo.cpp
config/: KITTI00_02.yaml  default.yaml
include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/: CMakeLists.txt  backend.cc  camera.cc  config.cc  dataset.cc  feature.cc  frame.cc  frontend.cc  map.cc  mappoint.cc  viewer.cc  visual_odometry.cc
test/: CMakeLists.txt  test_triangulation.cpp
